--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.2",
+    "bookshelf": "^0.13.3",
+    "bookshelf-camelcase": "^2.0.1",
     "express": "^4.16.2",
     "http-status-code": "^2.1.0",
-    "http-status-codes": "^1.3.0"
+    "http-status-codes": "^1.3.0",
+    "knex": "^0.14.6",
+    "mysql": "^2.15.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
