--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "start": "node dist",
-    "prestart": "npm run build",
-    "build": "rimraf dist && babel src -D --out-dir dist"
+    "start": "nodemon --watch src --exec babel-node src --source-maps"
   },
   "author": "",
   "license": "ISC",
