--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "http-status-code": "^2.1.0",
     "http-status-codes": "^1.3.0",
     "knex": "^0.14.6",
-    "mysql": "^2.15.0"
+    "mysql": "^2.15.0",
+    "boom": "^5.1.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
