--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "start": "nodemon --watch src --exec babel-node src --source-maps"
+    "start": "nodemon --watch src --exec babel-node src --source-maps > output.log &"
   },
   "author": "",
   "license": "ISC",
