--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "http-status-codes": "^1.3.0",
     "knex": "^0.14.6",
     "mysql": "^2.15.0",
-    "nodemon": "^1.17.4"
+    "nodemon": "^1.17.4",
+    "swagger-jsdoc": "^1.9.7"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
