--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bookshelf": "^0.13.3",
     "bookshelf-camelcase": "^2.0.1",
     "express": "^4.16.2",
+    "fuse.js": "^3.2.0",
     "http-status-code": "^2.1.0",
     "http-status-codes": "^1.3.0",
     "knex": "^0.14.6",
